--- a/index.html
+++ b/index.html
@@ -11,7 +11,39 @@
 </head>
 
 <body>
-    <p>COOL</p>
+    <header>
+
+        <div class="navbar">
+            <h1 class="page-title">My Portfolio</h1>
+            <a class="home" href="#home">Home</a>
+            <a href="#news">gitlab</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+            <!-- These are anchor elements which will help me create hyperlinks to the locations in the page. -->
+        </div>
+
+
+    </header>
+
+
+
+
+
+
+    <main>
+        <section>
+
+        </section>
+
+
+
+
+    </main>
+
 </body>
+
+<footer>
+
+</footer>
 
 </html>
