--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 
         <div class="navbar">
             <h1 class="page-title">My Portfolio</h1>
-            <a class="home" href="#home">Home</a>
-            <a href="#news">gitlab</a>
-            <a href="#contact">Contact</a>
             <a href="#about">About</a>
             <!-- These are anchor elements which will help me create hyperlinks to the locations in the page. -->
         </div>
@@ -31,19 +28,32 @@
 
 
     <main>
-        <section>
 
+        <section id="about">
+            <h1 class="abt">About me</h1>
         </section>
+
+
+
+
+
 
 
 
 
     </main>
 
+
+
+
+
+
+    <footer>
+
+    </footer>
+
 </body>
 
-<footer>
 
-</footer>
 
 </html>
