--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/reset.css" />
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Portfolio Page</title>
+
 </head>
 
 <body>
@@ -16,6 +17,8 @@
         <div class="navbar">
             <h1 class="page-title">My Portfolio</h1>
             <a href="#about">About</a>
+            <a href="#firstwork">Portfolio</a>
+            <a href="#contact">Contact</a>
             <!-- These are anchor elements which will help me create hyperlinks to the locations in the page. -->
         </div>
 
@@ -32,6 +35,13 @@
         <section id="about">
             <h1 class="abt">About me</h1>
         </section>
+        <h2 class="d"> Hello </h2>
+
+        <section id="firstwork">
+            <h1 class="gh">github</h1>
+        </section>
+        <h2 class="c"> Hello </h2>
+        <!-- The id's are linked to the anchor elements -->
 
 
 
@@ -50,6 +60,10 @@
 
     <footer>
 
+        <section id="contact">
+            <h1 class="a">Contact</h1>
+        </section>
+        <h2 class="c"> Hello </h2>
     </footer>
 
 </body>
