added more content

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="box"></div>
     <header>
 
         <div class="navbar">
@@ -35,12 +36,12 @@
         <section id="about">
             <h1 class="abt">About me</h1>
         </section>
-        <h2 class="d"> Hello </h2>
+        <h2 class="d"> Hello, My name is David Navarrete Ayala and I'm a beginner Web-Developer. </h2>
 
         <section id="firstwork">
             <h1 class="gh">github</h1>
         </section>
-        <h2 class="c"> Hello </h2>
+        <h2 class="c"> This here is my very first project. You can learn more about it on my github by clicking the image. </h2>
         <!-- The id's are linked to the anchor elements -->
 
 
@@ -61,9 +62,12 @@
     <footer>
 
         <section id="contact">
-            <h1 class="a">Contact</h1>
+            <h1 class="a">Contact at....</h1>
         </section>
-        <h2 class="c"> Hello </h2>
+        <h1 class="c">
+            <p>Email me @<a href="dnavarrete6001@gmail.com">dnavarrete6001@gmail.com</p>
+
+        </h1>
     </footer>
 
 </body>
