--- a/index.html
+++ b/index.html
@@ -34,14 +34,25 @@
     <main>
 
         <section id="about">
+
+
             <h1 class="abt">About me</h1>
         </section>
         <h2 class="d"> Hello, My name is David Navarrete Ayala and I'm a beginner Web-Developer. </h2>
 
-        <section id="firstwork">
-            <h1 class="gh">github</h1>
+
+        <section>
+            <a href="https://dna601.github.io/challenge01/"><img src="C:\Users\Dnava\Desktop\challenge02\assets\images\Screenshot 2022-06-20 205340.png" alt="David's github" style="width:300px;height:300px;"></a>
+
         </section>
-        <h2 class="c"> This here is my very first project. You can learn more about it on my github by clicking the image. </h2>
+
+
+        <section id="firstwork">
+
+            <h1 class="gh">github</h1>
+
+        </section>
+        <h2 class="c"> This here is my very first project. You can learn more about it on the deployed application by clicking the image above the github title. </h2>
         <!-- The id's are linked to the anchor elements -->
 
 
