--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
         <h2 class="d"> Hello, My name is David Navarrete Ayala and I'm a beginner Web-Developer. </h2>
 
 
-        <section>
-            <a href="https://dna601.github.io/challenge01/"><img src="C:\Users\Dnava\Desktop\challenge02\assets\images\Screenshot 2022-06-20 205340.png" alt="David's github" style="width:300px;height:300px;"></a>
 
-        </section>
 
 
         <section id="firstwork">
@@ -52,8 +49,13 @@
             <h1 class="gh">github</h1>
 
         </section>
-        <h2 class="c"> This here is my very first project. You can learn more about it on the deployed application by clicking the image above the github title. </h2>
+        <h2 class="c"> This here is my very first project. You can learn more about it on the deployed application by clicking the image below. </h2>
         <!-- The id's are linked to the anchor elements -->
+
+        <section>
+            <a href="https://dna601.github.io/challenge01/"><img src="C:\Users\Dnava\Desktop\challenge02\assets\images\Screenshot 2022-06-20 205340.png" alt="David's github" style="width:300px;height:300px;"></a>
+
+        </section>
 
 
 
